--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 gTTS
 aiofiles
 aiohttp
-asyncio
+asyncio           # actually bundled with Python 3.9+, you can REMOVE this line if you want
 beautifulsoup4
 dnspython
 ffmpeg-python
@@ -24,15 +24,17 @@ requests
 speedtest-cli
 spotipy
 tgcrypto
-telegraph 
+telegraph
 unidecode
 uvloop
 yt-dlp
 youtube-search
 youtube-search-python
+
 # ===========================================
 # ©️ 2025 Nand Yaduwanshi , aka @NoxxOP
 # 🔗 GitHub : https://github.com/NoxxOP/ShrutiMusic
 # 📢 Telegram Channel : https://t.me/ShrutiBots
 # ===========================================
+
 
